# rustybot

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
src/core/: connection.rs  engine.rs  engine_impl.rs  event_handler.rs  mod.rs
src/listener/: chat_listener.rs  listener.rs  listener_chat.rs  listener_online.rs  mod.rs  online_listener.rs  setonline_listener.rs
src/model/: mod.rs  model.rs
