[package]
name = "rustbot"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
tokio-tungstenite = { version = "*", features = ["native-tls"]}
tokio = { version = "1.48.0", features = ["full"] }
futures-channel = "0.3.31"
tungstenite = "0.28.0"

serde = { version = "*", features = ["derive"] }
serde_json = "*"